# ray-tracer-rust

./: .gitignore  Cargo.toml
src/: angle.rs  angle_generator.rs  bounds.rs  camera.rs  color.rs  diffuse_material.rs  hit.rs  image.rs  lib.rs  library.rs  light.rs  light_queue.rs  limits.rs  main.rs  material.rs  material_library.rs  math.rs  mesh.rs  mesh_volume.rs  obj_reader.rs  object.rs  parallel_light.rs  photon.rs  pipeline.rs  pixel.rs  pixel_coords.rs  plane.rs  plane_volume.rs  png_writer.rs  pyramid.rs  quaternion.rs  random_generator.rs  ray.rs  renderer.rs  scene.rs  transform.rs  tree.rs  triangle.rs  vector3.rs  volume.rs
tests/: test_renderer.rs
