[package]
name = "tdi_ray_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
crossbeam = "0.8.2"
kanal = "0.1.0-pre4"
png = "0.17.6"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
tobj = "3.2.3"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

[dev-dependencies]
rstest = "0.15.0"
